--- a/.github/placeholders/site.yml
+++ b/.github/placeholders/site.yml
@@ -1,4 +1,4 @@
-TITLE_1: SEP0527
+TITLE_1: SSC0570
 TITLE_2: Empreendedores em Informática
 SUBTITLE_1: Disciplina de graduação
 SUBTITLE_2: Material de aula, notebooks e referências.
@@ -12,5 +12,5 @@ REFERENCIAS: |
     <li>Artigo B …</li>
   </ul>
 
-GITHUB_LINK: https://github.com/Academic-Codex/SEP0527-Empreendedores-Em-Informatica
+GITHUB_LINK: https://github.com/Academic-Codex/SSC0570-Empreendedores-Em-Informatica
 HERO_FILE: empreendedores-em-informatica.png
